# svase

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  run_test.sh  svase.env
.github/: .submodules_generated  restore_submodules.sh  save_submodules.sh
.github/docker/: Dockerfile  docker-compose.yml  packages.txt
.github/workflows/: build.yml  license.yml  lint.yml
include/svase/: design.h  diag.h  postproc.h  preproc.h  rewrite.h  util.h
scripts/: gen_version.sh  restore_submodules.awk  run_test.sh  svase.env
src/: design.cpp  diag.cpp  driver.cpp  rewrite.cpp
test/: Makefile  README.md  cheshire.mk  cva6.mk  idma.mk  snitch.mk
test/assign/: assign.sv
test/const-param-propagate/: const-param-propagate.sv
test/param/: param-in-gen.sv  param-instance.sv  port-to-module.sv
